issue with letter spacing

--- a/css/media.css
+++ b/css/media.css
@@ -22,7 +22,6 @@
         height: auto;
         display: flex;
         flex-direction: column;
-        letter-spacing: normal;
     }
 
 
